--- a/pages/add-entry/add.module.scss
+++ b/pages/add-entry/add.module.scss
@@ -1,4 +1,5 @@
 $color-success: #40A557;
+$color-back: #FF9E80;
 
 .container {
     max-width: 1038px;
@@ -38,4 +39,15 @@ $color-success: #40A557;
     font-weight: 700;
     color: #133C21;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2), 0 2px 2px 0 rgba(0,0,0,0.19);
+    margin:0 10px;
+}
+.button__back {
+    background-color: $color-back;
+    font-size: 2rem;
+    padding: 16px 24px;
+    font-weight: 700;
+    color: #133C21;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2), 0 2px 2px 0 rgba(0,0,0,0.19);
+    margin:0 10px;
+   
 }
